configure file logging